--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -1,8 +1,19 @@
 .example-card {
-    max-width: 400px;
+    max-width: 150px;
+    max-height: 400px;
+    margin: 5px;
+    object-fit: contain;
   }
   
   .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
+  }
+
+  .item-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-left: 10%;
+    margin-right: 10%;
   }
