--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,24 +1,37 @@
 
-  <button (click) = "sorting('price')">Sort</button>
-
+  <button (click) = "sorting('price')">Sort by price</button>
+  <button (click) = "sorting('name')">Sort by name</button>
+  <modal id="custom-modal-1">
+      <div class="modal" *ngFor = "let item of items">
+          <div class="modal-body">
+              <h1>A Custom Modal!</h1>
+              <p>
+                  New name: <input type="text" [(ngModel)]= "item.name">
+              </p>
+              <button (click)="closeModal('custom-modal-1');">Close</button>
+          </div>
+      </div>
+      <div class="modal-background"></div>
+  </modal>
+<div class="item-list">
 <mat-card class="example-card" *ngFor = "let item of items">
+    <img mat-card-image [src]="item.imgSrc" alt="Photo of a Shiba Inu">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <!-- <div mat-card-avatar class="example-header-image"></div> -->
     <mat-card-title>{{item.name}}</mat-card-title>
     <mat-card-subtitle>{{item.fullName}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image [src]="item.imgSrc" alt="Photo of a Shiba Inu">
   <mat-card-content>
     <p>
-      {{ item.price }}
+      {{ item.price | currency: '$' }}
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>Edit</button>
-    <button mat-button>Delete</button>
+    <button mat-button (click)="openModal('custom-modal-1')">Edit</button>
+    <button (click) = "deleteItemFromList(i)" mat-button>Delete</button>
   </mat-card-actions>
 
   <input type="text" name="" id="" [(ngModel)] = "item.name" >
 </mat-card>
-
+</div>
 
