--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,18 +1,7 @@
 
   <button (click) = "sorting('price')">Sort by price</button>
   <button (click) = "sorting('name')">Sort by name</button>
-  <modal id="custom-modal-1">
-      <div class="modal" *ngFor = "let item of items">
-          <div class="modal-body">
-              <h1>A Custom Modal!</h1>
-              <p>
-                  New name: <input type="text" [(ngModel)]= "item.name">
-              </p>
-              <button (click)="closeModal('custom-modal-1');">Close</button>
-          </div>
-      </div>
-      <div class="modal-background"></div>
-  </modal>
+  
 <div class="item-list">
 <mat-card class="example-card" *ngFor = "let item of items">
     <img mat-card-image [src]="item.imgSrc" alt="Photo of a Shiba Inu">
@@ -28,8 +17,21 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button (click)="openModal('custom-modal-1')">Edit</button>
-    <button (click) = "deleteItemFromList(i)" mat-button>Delete</button>
+    <button (click) = "deleteItem()" mat-button>Delete</button>
   </mat-card-actions>
+
+  <modal id="custom-modal-1">
+    <div class="modal">
+        <div class="modal-body">
+            <h1>Edit a name</h1>
+            <p>
+                New name: <input type="text" name="" id="" [(ngModel)]= "item.name">
+            </p>
+            <button (click)="closeModal('custom-modal-1');">Close</button>
+        </div>
+    </div>
+    <div class="modal-background"></div>
+</modal>
 
   <input type="text" name="" id="" [(ngModel)] = "item.name" >
 </mat-card>
